# weavine

./: .env.example  .gitignore  .npmrc  .verify-action-detail.mjs  .verify-button.mjs  .verify-datalist.mjs  .verify-debug.mjs  .verify-dti-picker-selection.mjs  .verify-dti.mjs  .verify-form.mjs  .verify-merged-input.mjs  .verify-prod-datalist.mjs  .verify-smart-top5.mjs  .verify-square-checkbox.mjs  .verify-step.mjs  .verify-today-ritual.mjs  .verify-today-v2.mjs  AGENTS.md  CHANGELOG.md  Cargo.toml  PHASE1_VERIFICATION.md  README.md  TAURI_UPDATER_KEYS.md  electron-builder.yml  instrumentation.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  同类产品深度调研报告.md
.codex/: config.toml
.github/workflows/: ci.yml  debug-ebuilder.yml  release.yml
.opencode/: mcp.json
.playwright-mcp/: page-2026-06-21T01-30-44-804Z.yml
.sisyphus/plans/: 2026-06-27-nl-one-click-implementation.md  2026-06-28-phase1-tauri-desktop.md
.sisyphus/specs/: 2026-06-28-prm-tauri-migration-design.md  2026-06-28-weavine-tauri-migration-design.md
apps/landing/: README.md  astro.config.mjs  package.json  tailwind.config.mjs
apps/poc/: index.html  (+2 more)
deploy/: weavine-web.service  weavine.financialagent.cc.conf
docs/: mobile-limitations.md
e2e/: contact-crud.spec.ts  event-reminder.spec.ts  need-kanban.spec.ts  search.spec.ts  smoke.spec.ts
electron/: main.cjs  preload.cjs
prisma/: migrate-need-to-action.ts  schema.prisma  seed.ts
public/: manifest.json  sw.js
scripts/: copy-tauri-standalone.mjs  copy-vc-runtime.mjs  deploy-landing.sh  deploy-mcp.sh  deploy-prod.sh  dev.sh  download-node.mjs  e2e-web-server.sh  migrate-sqlite-to-pg.sh  postbuild-desktop.mjs  rollback-prod.sh  setup-mobile.sh
server/: .gitignore  Cargo.toml
server/migrations/: 20260704000001_initial_schema.sql  20260705000001_auth_and_devices.sql  20260705000002_domain_uuid_and_revisions.sql  20260705000003_sync_engine.sql  20260705000004_device_upsert_constraint.sql  20260705000005_archive_sweep_user.sql  20260709000002_add_contact_created_idx.sql  20260721000001_api_key.sql  20260721000002_api_key_ciphertext.sql
server/src/: api_key_crypto.rs  auth_keys.rs  main.rs
server/src/business/: archive_sweep.rs  mod.rs
server/src/handlers/: action.rs  api_key.rs  archive.rs  auth.rs  contact.rs  diagnostic.rs  event.rs  interaction.rs  mod.rs  project.rs  project_contact.rs  reminder.rs  search.rs  setting.rs  sync.rs  tag.rs
src/: auth.config.ts  auth.ts  instrumentation.ts  middleware.ts
src-tauri/: Cargo.toml  prm-export-2026-07-09 (1).json  prm-export-2026-07-09 (2).json  prm-export-2026-07-09 (3).json  prm-export-2026-07-09 (4).json  prm-export-2026-07-09 (5).json  prm-export-2026-07-09.json  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: check_schema.rs  schema_smoke.sql  smoke.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260709000001_add_contact_sort_indexes.sql
src-tauri/src/: boot_log.rs  db.rs  lib.rs  main.rs  migration.rs  models.rs  notifier.rs  project_template.rs  scheduler.rs  spawner.rs  tag_color.rs
src-tauri/src/business/: action.rs  archive_sweep.rs  contact.rs  diagnostic.rs  event.rs  interaction.rs  mod.rs  project.rs  project_contact.rs  reminder.rs  search.rs  setting.rs  tag.rs
src-tauri/src/commands/: action.rs  archive.rs  contact.rs  diagnostic.rs  event.rs  interaction.rs  mod.rs  params.rs  project.rs  project_contact.rs  reminder.rs  search.rs  setting.rs  sync.rs  tag.rs
src-tauri/src/handlers/: action.rs  archive.rs  auth.rs  contact.rs  diagnostic.rs  event.rs  http_err.rs  interaction.rs  mod.rs  project.rs  project_contact.rs  reminder.rs  search.rs  setting.rs  tag.rs
src-tauri/src/sync/: api.rs  config.rs  keys.rs  mod.rs  translate.rs
src-tauri/tests/: cloud_sync.rs  command_chain.rs  tauri_command_rename.rs
src-tauri/wix/: preserve-data.wxs
tauri-dist/: index.html
weavine-mcp/: Cargo.toml  README.md
weavine-mcp/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
weavine-mcp/src/tools/: action.rs  api_key.rs  archive.rs  auth_jwt.rs  contact.rs  diagnostic.rs  event.rs  interaction.rs  mod.rs  project.rs  reminder.rs  search.rs  setting.rs  sync.rs  tag.rs
(+253 files in other folders)
