[package]
name = "weavine"
version = "0.1.0"
edition = "2021"

[lib]
name = "weavine_lib"
crate-type = ["lib"]

[[bin]]
name = "weavine-web"
path = "src/bin/web_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
