[package]
name = "weavine"
version = "0.1.8"
edition = "2021"
default-run = "weavine"

[lib]
name = "weavine_lib"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "weavine"
path = "src/main.rs"

[features]
default = ["tauri"]
tauri = ["dep:tauri", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2", optional = true, features = [] }

[dependencies]
tauri = { version = "2", optional = true, features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
bcrypt = "0.15"
jsonwebtoken = "9"
rand = "0.8"

# sqlx: optional — only activated when server crate depends with features=["sqlx"]
# Provides FromRow derive for models without pulling in runtime deps.
sqlx = { version = "0.8", optional = true, default-features = false, features = ["macros"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
