[package]
name = "weavine-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weavine-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server", "macros", "transport-io", "transport-sse-server"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
